app/assets/stylesheets/songs.css.scss
// Place all the styles related to the Songs controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.modal-body .form-actions {
  display:none;
}

.ownership {
  cursor: pointer;
  width: 30px;
  display: inline-block;
  text-align: center;
}

.star-rating,
.star-rating a:hover,
.star-rating a:active,
.star-rating a:focus,
.star-rating .current-rating{
  background: url(../images/star.gif) left -1000px repeat-x;
}

.star-rating{
  position:relative;
  width:125px;
  height:25px;
  overflow:hidden;
  list-style:none;
  margin:0;
  padding:0;
  background-position: left top;
}

.star-rating li{
  display: inline;
}

.star-rating a,
.star-rating .current-rating{
  position:absolute;
  top:0;
  left:0;
  text-indent:-1000em;
  height:25px;
  line-height:25px;
  outline:none;
  overflow:hidden;
  border: none;
}

.star-rating a:hover,
.star-rating a:active,
.star-rating a:focus{
  background-position: left bottom;
}

.star-rating a.star1{
  width:20%;
  z-index:6;
}

.star-rating a.star2{
  width:40%;
  z-index:5;
}

.star-rating a.star3{
  width:60%;
  z-index:4;
}

.star-rating a.star4{
  width:80%;
  z-index:3;
}

.star-rating a.star5{
  width:100%;
  z-index:2;
}

.star-rating .current-rating{
  z-index:1;
  background-position: left center;
}    

